# myq-proxy

./: .gitignore  Cargo.toml  README.md
crates/myq-cli/: Cargo.toml
crates/myq-cli/src/: main.rs
crates/myq-server/: Cargo.toml
crates/myq-server/src/: discovery.rs  main.rs
crates/myq-server/src/snapshots/: myq_server__test__incoming_msg_ser.snap  myq_server__test__outgoing_msg_ser.snap
src/: lib.rs  urls.rs
