[package]
name = "myq-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = { workspace = true }
env_logger = { workspace = true }
html5ever = { workspace = true }
pkce = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
warp = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[workspace.dependencies]
http = "0.2"
env_logger = "0.9"
html5ever = "0.26"
pkce = "0.1"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.21", features = ["full"] }
warp = "0.3"
base64 = "0.13"
uuid = { version = "1.2", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
log = "0.4"
thiserror = "1"
url = "2"

[workspace]
members = ["crates/*"]
