[package]
name = "myq-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { workspace = true }
env_logger = { workspace = true }
html5ever = { workspace = true }
http = { workspace = true }
log = { workspace = true }
mockito = { workspace = true, optional = true }
pkce = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true, optional = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[features]
mockito-urls = ["dep:mockito", "dep:serde_urlencoded"]

[dev-dependencies]
mockito = "0.31"
serde_urlencoded = { version = "0.7" }

[workspace.dependencies]
base64 = "0.13"
env_logger = "0.9"
html5ever = "0.26"
http = "0.2"
log = "0.4"
mockito = "0.31"
pkce = "0.1"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = { version = "0.7" }
tokio = { version = "1.25", features = ["full"] }
thiserror = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
url = "2"
uuid = { version = "1.2", features = ["serde", "v4"] }

[workspace]
members = ["crates/*"]
