[package]
name = "myq-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4"
env_logger = { workspace = true }
futures-util = "0.3"
log = { workspace = true }
myq-proxy = { path = "../../" }
serde = { workspace = true }
serde_json = { workspace = true }
socket2 = "0.4"
tokio = { workspace = true }
warp = "0.3"
